--- a/Reward360Microservices/AnalyticsService/src/main/resources/application.properties
+++ b/Reward360Microservices/AnalyticsService/src/main/resources/application.properties
@@ -7,7 +7,7 @@ server.port=8089
 # FIXED: Added allowPublicKeyRetrieval=true
 spring.datasource.url=jdbc:mysql://localhost:3306/analyticsdb?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
 spring.datasource.username=root
-spring.datasource.password=password-1
+spring.datasource.password=Yagnesh1901@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # JPA/Hibernate Configuration
