--- a/Reward360Microservices/Fraud_MS/src/main/resources/application.properties
+++ b/Reward360Microservices/Fraud_MS/src/main/resources/application.properties
@@ -9,7 +9,7 @@ server.port=8082
 # ===============================
 spring.datasource.url=jdbc:mysql://localhost:3306/frauddb?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
 spring.datasource.username=root
-spring.datasource.password=password-1
+spring.datasource.password=Yagnesh1901@
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
