--- a/Reward360Microservices/Fraud_MS 2/Fraud_MS/src/main/resources/application.properties
+++ b/Reward360Microservices/Fraud_MS 2/Fraud_MS/src/main/resources/application.properties
@@ -7,16 +7,20 @@ server.port=8082
 # ===============================
 # Database Configuration
 # ===============================
-spring.datasource.url=jdbc:mysql://localhost:3306/frauddb?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
+spring.datasource.url=jdbc:mysql://localhost:3306/faurdb?createDatabaseIfNotExist=true&useSSL=false&allowPublicKeyRetrieval=true
 spring.datasource.username=root
 spring.datasource.password=Yagnesh1901@
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
 
+eureka.instance.prefer-ip-address=true
+eureka.instance.hostname=localhost
+
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
-eureka.instance.prefer-ip-address=true
-eureka.instance.hostname=localhost
+
+
