--- a/Reward360Microservices/Fraud_MS/src/main/resources/application.properties
+++ b/Reward360Microservices/Fraud_MS/src/main/resources/application.properties
@@ -7,7 +7,7 @@ server.port=8082
 # ===============================
 # Database Configuration
 # ===============================
-spring.datasource.url=jdbc:mysql://localhost:3306/faurdb?createDatabaseIfNotExist=true&useSSL=false&allowPublicKeyRetrieval=true
+spring.datasource.url=jdbc:mysql://localhost:3306/Checkfaurd?createDatabaseIfNotExist=true&useSSL=false&allowPublicKeyRetrieval=true
 spring.datasource.username=root
 spring.datasource.password=Yagnesh1901@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
